name:              yes-precure5-command
version:           5.0.1
license:           MIT
license-file:      LICENSE
author:            YAMAMOTO Yuji
maintainer:        YAMAMOTO Yuji <whosekiteneverfly@gmail.com>
synopsis:          Extended yes command to reproduce phrases in Yes! Precure 5
description:
  Provides extended yes command to reproduce phrases in Yes! Precure 5.
  .
  See <https://github.com/igrep/yes-precure5-command/blob/master/README.mkd> for details.
category:          ACME
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/igrep/yes-precure5-command/

source-repository head
  type: git
  location: https://github.com/igrep/yes-precure5-command.git

library
  ghc-options: -Wall
  exposed-modules: ACME.Yes.PreCure5
  build-depends:
      base == 4.*
    , Cabal >= 1.18
    , random
    , parsec >= 3.0
    , mtl

executable yes
  buildable: True
  ghc-options: -Wall
  main-is: main.hs
  build-depends:
      base == 4.*
    , Cabal >= 1.18
    , yes-precure5-command
    , mtl
    , parsec >= 3.0
    , random

test-suite spec
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:    -Wall
  main-is:        Spec.hs
  other-modules:  ACME.Yes.PreCure5Spec
  build-depends:
      base == 4.*
    , hspec >= 1.3
    , yes-precure5-command
