name:              yes-precure5-command
version:           5.5.3
license:           MIT
license-file:      LICENSE
author:            Yuji Yamamoto
maintainer:        Yuji Yamamoto <whosekiteneverfly@gmail.com>
synopsis:          Extended yes command to reproduce phrases in Yes! Precure 5.
description:
  Provides extended yes command to reproduce phrases in Yes! Precure 5 or Yes! PreCure5 GoGo!
  .
  See <https://github.com/igrep/yes-precure5-command/blob/master/README.mkd> for details.
category:          ACME
stability:         Stable
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/igrep/yes-precure5-command/

source-repository head
  type: git
  location: https://github.com/igrep/yes-precure5-command.git

library
  ghc-options: -Wall
  exposed-modules:
      ACME.Yes.PreCure5
    , ACME.Yes.PreCure5.Parser
    , ACME.Yes.PreCure5.Parser.Common
    , ACME.Yes.PreCure5.Profiles
    , ACME.Yes.PreCure5.Random
    , ACME.Yes.PreCure5.Class
    , ACME.Yes.PreCure5.GoGo
    , ACME.Yes.PreCure5.GoGo.Profiles
    , ACME.Yes.PreCure5.GoGo.Parser
  build-depends:
      base == 4.*
    , Cabal >= 1.18
    , random
    , parsec >= 3.0
    , mtl
    , containers

executable yes
  buildable: True
  ghc-options: -Wall
  main-is: main.hs
  build-depends:
      base == 4.*
    , Cabal >= 1.18
    , yes-precure5-command
    , mtl
    , parsec >= 3.0
    , random
    , containers

test-suite spec
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:    -Wall
  main-is:        Spec.hs
  other-modules:
      ACME.Yes.PreCure5.ParserSpec
      ACME.Yes.PreCure5.GoGo.ParserSpec
    , ACME.Yes.PreCure5.GoGo.ProfilesSpec
  build-depends:
      base == 4.*
    , hspec >= 1.3
    , QuickCheck
    , containers
    , yes-precure5-command
